--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "1.0.6"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.5.4",
