--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "1.0.6"
   },
   "dependencies": {
+    "hapi": "^16.5.2",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
